--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.3.15", features = ["cargo"] }
+crypto = "0.5.1"
+dialoguer = "0.10.4"
+rand = "0.8.5"
