--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ reqwest = "0.11.18"
 simplecrypt = "1.0.2"
 tokio = { version = "1.29.1", features = ["full"] } 
 zip = "0.6.6"
+zip-extensions = "0.6.1"
