--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 clap = { version = "4.3.15", features = ["cargo"] }
 custom_error = "1.9.2"
 dialoguer = "0.10.4"
+dirs = "5.0.1"
 indicatif = "0.17.5"
 rand = "0.8.5"
 reqwest = "0.11.18"
