--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ indicatif = "0.17.5"
 rand = "0.8.5"
 reqwest = "0.11.18"
 simplecrypt = "1.0.2"
+termion = "2.0.1"
 tokio = { version = "1.29.1", features = ["full"] } 
 zip = "0.6.6"
 zip-extensions = "0.6.1"
