--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ dialoguer = "0.10.4"
 dirs = "5.0.1"
 indicatif = "0.17.5"
 rand = "0.8.5"
-reqwest = "0.11.18"
+reqwest = {version = "0.11.18", features = ["multipart"]}
 serde = {version = "1.0.175", features = ["derive"] }
 serde_json = "1.0.103"
 simplecrypt = "1.0.2"
