--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ custom_error = "1.9.2"
 dialoguer = "0.10.4"
 dirs = "5.0.1"
 indicatif = "0.17.5"
+qrcode = "0.12.0"
 rand = "0.8.5"
 reqwest = {version = "0.11.18", features = ["multipart"]}
 serde = {version = "1.0.175", features = ["derive"] }
