--- a/.github/workflows/build_project.yml
+++ b/.github/workflows/build_project.yml
@@ -7,10 +7,7 @@ on:
 
 jobs:
   build_and_move:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
