--- a/.github/workflows/build_project.yml
+++ b/.github/workflows/build_project.yml
@@ -16,6 +16,11 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+          targets: |
+            x86_64-unknown-linux-gnu
+            x86_64-pc-windows-msvc
+            x86_64-apple-darwin
+
       - uses: actions-rs/cargo@v1
         with:
           command: build
