--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ clap = { version = "4.3.15", features = ["cargo"] }
 custom_error = "1.9.2"
 dialoguer = "0.10.4"
 dirs = "5.0.1"
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
+freecurrencyapi-rs = "0.1.0"
 ifcfg = "0.1.2"
 indicatif = "0.17.5"
 itertools = "0.11.0"
